--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -80,3 +80,4 @@ ifeq ($(TIMA_ENABLED),1)
 obj-$(CONFIG_TIMA_LOG)		+= tima_debug_log.o
 endif
 obj-$(CONFIG_TZDEV)		+= tzdev/
+obj-$(CONFIG_UID_CPUTIME) += uid_cputime.o
