--- a/arch/arm/boot/dts/qcom/msm8916-memory.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8916-memory.dtsi
@@ -29,7 +29,7 @@
 			linux,reserve-contiguous-region;
 			linux,reserve-region;
 			linux,remove-completely;
-			reg = <0x0 0x86800000 0x0 0x05600000>;
+			reg = <0x0 0x86800000 0x0 0x05500000>;
 			label = "modem_adsp_mem";
 		};
 
@@ -37,8 +37,16 @@
 			linux,reserve-contiguous-region;
 			linux,reserve-region;
 			linux,remove-completely;
-			reg = <0x0 0x8be00000 0x0 0x0600000>;
+			reg = <0x0 0x8bd00000 0x0 0x0600000>;
 			label = "peripheral_mem";
+		};
+
+		hardboot_mem: hardboot_region@0 {
+			linux,reserve-contiguous-region;
+			linux,reserve-region;
+			linux,remove-completely;
+			reg = <0x0 0x8c300000 0x0 0x0100000>;
+			label = "hardboot_mem";
 		};
 
 		mba_mem: mba_region@0 {
