config: disable qseecom

--- a/arch/arm/configs/o7prolte_defconfig
+++ b/arch/arm/configs/o7prolte_defconfig
@@ -1295,7 +1295,7 @@ CONFIG_MUIC_SUPPORT_DESKDOCK=y
 # CONFIG_MUIC_SM5703_SUPPORT_LANHUB_TA is not set
 # CONFIG_SRAM is not set
 # CONFIG_HAPTIC_ISA1200 is not set
-CONFIG_QSEECOM=y
+#CONFIG_QSEECOM=y
 # CONFIG_QFP_FUSE is not set
 # CONFIG_QPNP_MISC is not set
 # CONFIG_TI_DRV2667 is not set
@@ -4098,7 +4098,7 @@ CONFIG_SEC_SELINUX=y
 #
 # ICCC
 #
-CONFIG_TZ_ICCC=y
+#CONFIG_TZ_ICCC=y
 # CONFIG_TZ_ICCC_DEBUG is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
