--- a/arch/arm/configs/o7lte_defconfig
+++ b/arch/arm/configs/o7lte_defconfig
@@ -329,6 +329,7 @@ CONFIG_ARCH_MSM=y
 # CONFIG_ARCH_APQ8084 is not set
 # CONFIG_ARCH_MSM8909 is not set
 CONFIG_ARCH_MSM8916=y
+# CONFIG_ARCH_MSM8929 is not set
 # CONFIG_ARCH_MSM8939 is not set
 # CONFIG_ARCH_FSM9900 is not set
 # CONFIG_ARCH_FSM9010 is not set
@@ -342,7 +343,11 @@ CONFIG_ARCH_MSM8916=y
 # CONFIG_3G_DDR_SUPPORT is not set
 # CONFIG_SEC_A7_PROJECT is not set
 # CONFIG_SEC_A3_PROJECT is not set
+# CONFIG_SEC_A3_EUR_PROJECT is not set
+# CONFIG_SEC_A33G_EUR_PROJECT is not set
 # CONFIG_SEC_A5_PROJECT is not set
+# CONFIG_SEC_A5_EUR_PROJECT is not set
+# CONFIG_SEC_A53G_EUR_PROJECT is not set
 # CONFIG_SEC_GTEL_PROJECT is not set
 # CONFIG_SEC_GTES_PROJECT is not set
 # CONFIG_SEC_K5_PROJECT is not set
@@ -354,10 +359,15 @@ CONFIG_SEC_O7_PROJECT=y
 # CONFIG_MACH_O7_CHN_OPEN is not set
 CONFIG_MACH_O7_SWA_OPEN=y
 # CONFIG_SEC_J3_PROJECT is not set
+# CONFIG_SEC_J1X_PROJECT is not set
+# CONFIG_SEC_J5X_PROJECT is not set
+# CONFIG_SEC_J5_PROJECT is not set
+# CONFIG_SEC_J5N_PROJECT is not set
 # CONFIG_SEC_J1_PROJECT is not set
 # CONFIG_SEC_E5_PROJECT is not set
 CONFIG_USER_RESET_DEBUG=y
 # CONFIG_SEC_E7_PROJECT is not set
+# CONFIG_SEC_ON7N_PROJECT is not set
 # CONFIG_SEC_GT58_PROJECT is not set
 # CONFIG_SEC_GT510_PROJECT is not set
 # CONFIG_SEC_FORTUNA_PROJECT is not set
@@ -545,9 +555,14 @@ CONFIG_MEMORY_HOLE_CARVEOUT=y
 # CONFIG_USE_USER_ACCESSIBLE_TIMERS is not set
 # CONFIG_ZBUD is not set
 CONFIG_ZSWAP=y
+# CONFIG_ZSWAP_ENABLE_WRITEBACK is not set
+# CONFIG_ZSWAP_COMPACTION is not set
+# CONFIG_ZSWAP_SAME_PAGE_SHARING is not set
 CONFIG_ZPOOL=y
 CONFIG_ZSMALLOC=y
 CONFIG_PGTABLE_MAPPING=y
+# CONFIG_ZSMALLOC_STAT is not set
+# CONFIG_ZSMALLOC_OBJ_SEQ is not set
 CONFIG_DIRECT_RECLAIM_FILE_PAGES_ONLY=y
 CONFIG_INCREASE_MAXIMUM_SWAPPINESS=y
 CONFIG_FIX_INACTIVE_RATIO=y
@@ -634,6 +649,7 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 CONFIG_VFP=y
 CONFIG_VFPv3=y
 CONFIG_NEON=y
+# CONFIG_KERNEL_MODE_NEON is not set
 
 #
 # Userspace binary formats
@@ -665,6 +681,7 @@ CONFIG_PM_RUNTIME=y
 CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
 # CONFIG_APM_EMULATION is not set
+CONFIG_ARCH_HAS_OPP=y
 CONFIG_PM_CLK=y
 CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
@@ -1100,6 +1117,7 @@ CONFIG_BT_HIDP=y
 #
 # Bluetooth device drivers
 #
+# CONFIG_BT_HCISMD is not set
 # CONFIG_BT_HCIBTUSB is not set
 # CONFIG_BT_HCIBTSDIO is not set
 # CONFIG_BT_HCIUART is not set
@@ -1136,10 +1154,12 @@ CONFIG_CFG80211_INTERNAL_REGDB=y
 # CONFIG_CEPH_LIB is not set
 # CONFIG_NFC is not set
 # CONFIG_NFC_QNCI is not set
+# CONFIG_NFC_NQ is not set
 # CONFIG_NFC_PN547 is not set
 # CONFIG_ESE_P61 is not set
 # CONFIG_SEC_NFC_I2C is not set
 # CONFIG_SEC_NFC is not set
+# CONFIG_ESE_P3 is not set
 # CONFIG_SEC_NFC_IO_EN is not set
 # CONFIG_BCM2079X_NFC_I2C is not set
 CONFIG_IPC_ROUTER=y
@@ -1170,9 +1190,11 @@ CONFIG_SOC_BUS=y
 CONFIG_REGMAP=y
 CONFIG_REGMAP_I2C=y
 CONFIG_REGMAP_SPI=y
+# CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS is not set
 CONFIG_DMA_SHARED_BUFFER=y
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUG is not set
+# CONFIG_CMA_PINPAGE_MIGRATION is not set
 
 #
 # Default contiguous memory area size:
@@ -1260,6 +1282,7 @@ CONFIG_SAMSUNG_JACK=y
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SM5502_MUIC is not set
 CONFIG_SM5703_MUIC=y
+# CONFIG_MUIC_NOTI is not set
 # CONFIG_S2MM001_VBUS_CHECK is not set
 # CONFIG_SM5504_MUIC is not set
 CONFIG_USBID_STANDARD_VER_01=y
@@ -1277,6 +1300,7 @@ CONFIG_QSEECOM=y
 # CONFIG_QPNP_MISC is not set
 # CONFIG_TI_DRV2667 is not set
 # CONFIG_QCOM_LIQUID_DOCK is not set
+# CONFIG_UID_CPUTIME is not set
 CONFIG_SEC_MISC=y
 CONFIG_SEC_GPIO_SETTINGS=y
 CONFIG_CHECK_SIMSLOT_COUNT=y
@@ -1313,6 +1337,24 @@ CONFIG_MSM_QDSP6V2_CODECS=y
 # CONFIG_TZ_MMAP_TEST is not set
 # CONFIG_EFUSE_TEST is not set
 CONFIG_ION_FD2PHYS=y
+# CONFIG_SENSORS_BHI is not set
+
+#
+# NOTIFIER configs
+#
+# CONFIG_VBUS_NOTIFIER is not set
+
+#
+# MUIC configs
+#
+# CONFIG_USE_MUIC is not set
+# CONFIG_USE_SAFEOUT is not set
+# CONFIG_MUIC_FSA9480 is not set
+# CONFIG_SWITCH_DUAL_MODEM is not set
+
+#
+# MUIC configs
+#
 
 #
 # SCSI device support
@@ -1570,6 +1612,7 @@ CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_EVBUG=m
 # CONFIG_INPUT_KEYRESET is not set
 # CONFIG_INPUT_KEYCOMBO is not set
+# CONFIG_SENSORS_HALL is not set
 # CONFIG_COMMON_INPUT_BOOSTER is not set
 # CONFIG_INPUT_BOOSTER is not set
 
@@ -1583,6 +1626,9 @@ CONFIG_INPUT_KEYBOARD=y
 # CONFIG_KEYBOARD_ABOV_TOUCH_A5 is not set
 # CONFIG_KEYBOARD_ABOV_TOUCH_A8 is not set
 # CONFIG_KEYBOARD_ABOV_TOUCH_NA7 is not set
+# CONFIG_KEYBOARD_ABOV_TOUCH_FT16XX is not set
+# CONFIG_KEYBOARD_ABOV_TOUCH_FT18XX is not set
+# CONFIG_TOUCHKEY_GRIP is not set
 # CONFIG_KEYBOARD_ADP5588 is not set
 # CONFIG_KEYBOARD_ADP5589 is not set
 CONFIG_KEYBOARD_ATKBD=y
@@ -1606,9 +1652,14 @@ CONFIG_KEYBOARD_GPIO=y
 # CONFIG_KEYBOARD_SUNKBD is not set
 # CONFIG_KEYBOARD_TC360_TKEY is not set
 # CONFIG_KEYBOARD_XTKBD is not set
-# CONFIG_SENSORS_HALL is not set
 # CONFIG_SENSORS_HALL_REAR is not set
 # CONFIG_KEYBOARD_TC360_TKEY_J3 is not set
+# CONFIG_USE_VM_KEYBOARD_REJECT is not set
+# CONFIG_KEYBOARD_TC360_TKEY_J7 is not set
+# CONFIG_KEYBOARD_TC305_TKEY is not set
+# CONFIG_KEYBOARD_TC360_TKEY_J5X is not set
+# CONFIG_KEYBOARD_TC360_TKEY_J5 is not set
+# CONFIG_KEYBOARD_TC350K is not set
 CONFIG_INPUT_MOUSE=y
 CONFIG_MOUSE_PS2=y
 CONFIG_MOUSE_PS2_ALPS=y
@@ -1707,6 +1758,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_GT9XX is not set
 # CONFIG_TOUCHSCREEN_BU21150 is not set
 # CONFIG_INPUT_MT_WRAPPER is not set
+# CONFIG_TOUCHSCREEN_IT7260_I2C is not set
 # CONFIG_TOUCHSCREEN_MMS300 is not set
 # CONFIG_TOUCHSCREEN_MMS300_A is not set
 # CONFIG_TOUCHSCREEN_ATMEL_MXT1188S is not set
@@ -1730,10 +1782,13 @@ CONFIG_TOUCHSCREEN_ZT7538_TS=y
 # CONFIG_TOUCHSCREEN_MELFAS_MMS492 is not set
 # CONFIG_TOUCHSCREEN_DUMP_MODE is not set
 # CONFIG_TOUCHSCREEN_ZINITIX_BT532 is not set
+# CONFIG_TOUCHSCREEN_ZT7538 is not set
 CONFIG_TOUCHSCREEN_IST30XXC=y
+# CONFIG_TOUCHSCREEN_IST30XXC_CMCS is not set
 # CONFIG_TOUCHSCREEN_SEC_TS is not set
 # CONFIG_TOUCHSCREEN_SEC_TS_GLOVEMODE is not set
 # CONFIG_TOUCHSCREEN_ZINITIX_BT432 is not set
+# CONFIG_TOUCHSCREEN_BT432_TS is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -1762,6 +1817,8 @@ CONFIG_INPUT_GPIO=y
 # CONFIG_INPUT_CMA3000 is not set
 # CONFIG_BMP18X is not set
 # CONFIG_SENSORS_MMA8X5X is not set
+# CONFIG_SENSORS_AP3426 is not set
+# CONFIG_SENSORS_LTR553 is not set
 # CONFIG_SENSORS_MMC3416X is not set
 # CONFIG_SENSORS_AKM09911 is not set
 # CONFIG_SENSORS_AKM8963 is not set
@@ -1898,6 +1955,7 @@ CONFIG_I2C_MSM_V2=y
 CONFIG_SLIMBUS=y
 # CONFIG_SLIMBUS_MSM_CTRL is not set
 CONFIG_SLIMBUS_MSM_NGD=y
+# CONFIG_SOUNDWIRE is not set
 CONFIG_SPI=y
 # CONFIG_SPI_DEBUG is not set
 CONFIG_SPI_MASTER=y
@@ -2235,6 +2293,7 @@ CONFIG_MFD_SM5703=y
 # CONFIG_MFD_MAX77686 is not set
 # CONFIG_MFD_MAX77693 is not set
 # CONFIG_MFD_MAX77843 is not set
+# CONFIG_MFD_SM5705 is not set
 # CONFIG_MFD_MAX8907 is not set
 # CONFIG_MFD_MAX8925 is not set
 # CONFIG_MFD_MAX8997 is not set
@@ -2288,6 +2347,7 @@ CONFIG_MFD_LM3632=y
 # CONFIG_WCD9310_CODEC is not set
 # CONFIG_WCD9320_CODEC is not set
 # CONFIG_WCD9306_CODEC is not set
+# CONFIG_WCD9335_CODEC is not set
 CONFIG_REGULATOR=y
 # CONFIG_REGULATOR_DEBUG is not set
 # CONFIG_REGULATOR_DUMMY is not set
@@ -2400,6 +2460,7 @@ CONFIG_MSM_ISPIF=y
 CONFIG_S5K3L2XX=y
 # CONFIG_S5K3P3SX is not set
 CONFIG_S5K5E3YX=y
+# CONFIG_SR552 is not set
 # CONFIG_S5K4ECGX is not set
 # CONFIG_OV12830 is not set
 # CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE is not set
@@ -2408,7 +2469,10 @@ CONFIG_MSMB_JPEG=y
 # CONFIG_CAM_USE_EXT_VANA_GPIO is not set
 CONFIG_CAMERA_SYSFS_V2=y
 # CONFIG_DB8221A is not set
+# CONFIG_OIS is not set
 # CONFIG_CAM_DUAL_POWER_SEQ is not set
+# CONFIG_FRONT_FLASH is not set
+# CONFIG_EEPROM_CAMERA_QUP_I2C is not set
 CONFIG_MSM_VIDC_V4L2=y
 # CONFIG_MSM_VIDC_VMEM is not set
 # CONFIG_MSM_WFD is not set
@@ -2508,6 +2572,7 @@ CONFIG_MEDIA_TUNER_MC44S803=y
 # CONFIG_DVB_DUMMY_FE is not set
 # CONFIG_ISDBT is not set
 # CONFIG_ISDBT_F_TYPE_ANTENNA is not set
+# CONFIG_TDMB is not set
 
 #
 # Graphics support
@@ -2644,6 +2709,7 @@ CONFIG_FB_MSM_MDSS_SAMSUNG=y
 # CONFIG_PANEL_S6D7AA0_LSL080AL03_RT8511_WXGA is not set
 # CONFIG_PANEL_S6E3FA3_AMS568HN01_FHD is not set
 # CONFIG_PANEL_S6E3FA3_AMS549JR01_FHD is not set
+# CONFIG_PANEL_S6E3FA3_AMS520KG01_FHD is not set
 # CONFIG_PANEL_EA8061V_AMS391DT01_XGA is not set
 # CONFIG_PANEL_S6D7AA0X62_BV050HDM_HD_5_0 is not set
 CONFIG_PANEL_S6D7AA0X62_BV050HDM_HD_5_5=y
@@ -2651,6 +2717,10 @@ CONFIG_PANEL_S6D7AA0X62_BV050HDM_HD_5_5=y
 # CONFIG_PANEL_S6D7AA0X11_TV080WXM_WXGA is not set
 CONFIG_PANEL_ILI9881C_SKI550002_HD=y
 # CONFIG_PANEL_S6E8AA5X01_AMS497HY01_HD is not set
+# CONFIG_PANEL_S6E8AA5X01_AMS497HY01_720P is not set
+# CONFIG_PANEL_S6E8AA5X01_AMS520KT01_HD is not set
+# CONFIG_PANEL_EA8061_AMS549HZ01 is not set
+# CONFIG_PANEL_EA8061S_AMS450JV01_WVGA is not set
 # CONFIG_EXYNOS_VIDEO is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
@@ -2748,9 +2818,12 @@ CONFIG_SAMSUNG_AUDIO=y
 # CONFIG_AUDIO_SPEAKER_OUT_MAXIM_AMP_ENABLE is not set
 # CONFIG_AUDIO_SECONDARY_MIC_USE_EXT_BIAS_ENABLE is not set
 # CONFIG_AUDIO_QUAT_I2S_ENABLE is not set
+# CONFIG_JACK_AUDIO is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
 CONFIG_SND_SOC_MSM8X16_WCD=y
+CONFIG_AUDIO_EXT_CLK=y
+CONFIG_SND_SOC_WCD_MBHC=y
 CONFIG_SND_SOC_MSM_STUB=y
 CONFIG_SW_100K_TO_GND=y
 # CONFIG_SND_SIMPLE_CARD is not set
@@ -3091,6 +3164,7 @@ CONFIG_USB_F_SERIAL=y
 # CONFIG_USB_G_PRINTER is not set
 CONFIG_USB_G_ANDROID=y
 CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
+# CONFIG_USB_DUN_SUPPORT is not set
 CONFIG_USB_ANDROID_SAMSUNG_MTP=y
 # CONFIG_USB_ANDROID_RNDIS_DWORD_ALIGNED is not set
 CONFIG_USB_ANDROID_SAMSUNG_SIDESYNC=y
@@ -3111,6 +3185,7 @@ CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
 CONFIG_MMC_PERF_PROFILING=y
 # CONFIG_SEC_HYBRID_TRAY is not set
+# CONFIG_MMC_DS_TOOL is not set
 CONFIG_MMC_SUPPORT_STLOG=y
 CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC_CLKGATE=y
@@ -3150,7 +3225,6 @@ CONFIG_LEDS_CLASS=y
 #
 # LED drivers
 #
-# CONFIG_LEDS_KTD2026 is not set
 # CONFIG_LEDS_LM3530 is not set
 # CONFIG_LEDS_LM3642 is not set
 # CONFIG_LEDS_PCA9532 is not set
@@ -3165,6 +3239,7 @@ CONFIG_LEDS_QPNP=y
 # CONFIG_LEDS_QPNP_FLASH is not set
 # CONFIG_LEDS_QPNP_WLED is not set
 # CONFIG_LEDS_MSM_GPIO_FLASH is not set
+# CONFIG_LEDS_KTD2026 is not set
 # CONFIG_LEDS_DAC124S085 is not set
 # CONFIG_LEDS_PWM is not set
 # CONFIG_LEDS_REGULATOR is not set
@@ -3179,6 +3254,8 @@ CONFIG_FLASHLIGHT=y
 CONFIG_SM_FLASH_LED=y
 CONFIG_FLED_SM5703=y
 CONFIG_FLED_SM5703_EXT_GPIO=y
+# CONFIG_FLED_LM3632 is not set
+# CONFIG_FLED_KTD2692 is not set
 # CONFIG_RT_FLASH_LED is not set
 
 #
@@ -3366,6 +3443,12 @@ CONFIG_ION_MSM=y
 CONFIG_VNSWAP=y
 
 #
+# Qualcomm Atheros Prima WLAN module
+#
+# CONFIG_PRIMA_WLAN is not set
+# CONFIG_PRONTO_WLAN is not set
+
+#
 # Qualcomm MSM specific device drivers
 #
 # CONFIG_MSM_SSBI is not set
@@ -3391,6 +3474,8 @@ CONFIG_MSM_AVTIMER=y
 CONFIG_MSM_BUS_SCALING=y
 CONFIG_MSM_BUSPM_DEV=m
 CONFIG_BUS_TOPOLOGY_ADHOC=y
+# CONFIG_DEBUG_BUS_VOTER is not set
+# CONFIG_I2C_MSM_PROF_DBG is not set
 # CONFIG_MSM_UIM_HSL is not set
 # CONFIG_QPNP_HAPTIC is not set
 # CONFIG_SEEMP_CORE is not set
@@ -3409,7 +3494,7 @@ CONFIG_ARM_ARCH_TIMER=y
 CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
 # CONFIG_MSM_VIBRATOR is not set
 # CONFIG_BLDC_VIBRATOR is not set
-# CONFIG_VIBETONZ is not set
+# CONFIG_SS_VIBRATOR is not set
 CONFIG_SM5703_VIBRATOR=y
 # CONFIG_MAILBOX is not set
 CONFIG_IOMMU_SUPPORT=y
@@ -3421,7 +3506,6 @@ CONFIG_MSM_IOMMU_V1=y
 # CONFIG_MSM_IOMMU_VBIF_CHECK is not set
 # CONFIG_IOMMU_NON_SECURE is not set
 # CONFIG_IOMMU_FORCE_4K_MAPPINGS is not set
-# CONFIG_MSM_IOMMU_TLBINVAL_ON_MAP is not set
 CONFIG_MMU500_ACTIVE_PREFETCH_BUG_WITH_SECTION_MAPPING=y
 
 #
@@ -3490,6 +3574,7 @@ CONFIG_FUELGAUGE_SM5703=y
 # CONFIG_FUELGAUGE_MAX77849 is not set
 # CONFIG_FUELGAUGE_S2MU003 is not set
 CONFIG_PREVENT_SOC_JUMP=y
+# CONFIG_FUELGAUGE_SM5705 is not set
 # CONFIG_CHARGER_DUMMY is not set
 # CONFIG_CHARGER_SMB328 is not set
 # CONFIG_CHARGER_SMB358 is not set
@@ -3503,11 +3588,13 @@ CONFIG_PREVENT_SOC_JUMP=y
 CONFIG_CHARGER_SM5703=y
 CONFIG_CHARGER_SM5703_SOFT_START_CHARGING=y
 CONFIG_CHARGER_SM5703_DUALPATH=y
+# CONFIG_CHARGER_SM5705 is not set
 CONFIG_SAMSUNG_LPM_MODE=y
 # CONFIG_SAMSUNG_BATTERY_ENG_TEST is not set
 # CONFIG_SAMSUNG_BATTERY_FACTORY is not set
 # CONFIG_DISABLE_SAVE_CAPACITY_MAX is not set
 CONFIG_SIOP_CHARGING_LIMIT_CURRENT=700
+# CONFIG_DISABLE_MINIMUM_SIOP_CHARGING is not set
 # CONFIG_EN_OOPS is not set
 # CONFIG_STORE_MODE is not set
 # CONFIG_SW_SELF_DISCHARGING is not set
@@ -3517,10 +3604,13 @@ CONFIG_SENSORS_CORE=y
 CONFIG_SENSORS_K2HH=y
 # CONFIG_SENSORS_K2HH_VDD is not set
 CONFIG_SENSORS_CM36672P=y
+# CONFIG_SENSORS_CM36672P_SMART_PERS is not set
 # CONFIG_SENSORS_CM36652 is not set
 # CONFIG_SENSORS_CM36652_LEDA_EN_GPIO is not set
 # CONFIG_SENSORS_CM36652_SENSOR_EN_GPIO is not set
 # CONFIG_SENSORS_CM36655 is not set
+# CONFIG_SENSORS_CM36686 is not set
+# CONFIG_SENSORS_CM36686_LEDA_EN_GPIO is not set
 # CONFIG_SENSORS_GP2A002 is not set
 # CONFIG_SENSORS_LEDA_EN_GPIO is not set
 # CONFIG_SENSORS_CM3323 is not set
@@ -3544,6 +3634,7 @@ CONFIG_SENSORS_SX9500_NORMAL_TOUCH_THRESHOLD=17
 # CONFIG_SENSORS_TMD3782S is not set
 # CONFIG_CHARGER_NOTIFY_SENSOR is not set
 # CONFIG_SENSORS_AK09911C is not set
+# CONFIG_SENSORS_AK09916C is not set
 # CONFIG_SENSORS_FINGERPRINT is not set
 
 #
@@ -3603,6 +3694,7 @@ CONFIG_MSM_XPU_ERR_FATAL=y
 # CONFIG_MSM_PACMAN is not set
 CONFIG_MSM_CORE_CTL_HELPER=y
 CONFIG_MSM_PERFORMANCE=y
+CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 
 #
@@ -3734,6 +3826,7 @@ CONFIG_WTL_ENCRYPTION_FILTER=y
 CONFIG_ECRYPT_FS_VIRTUAL_FAT_XATTR=y
 CONFIG_SDP=y
 # CONFIG_SDP_KEY_DUMP is not set
+# CONFIG_DLP is not set
 CONFIG_SCFS=y
 # CONFIG_SYSTEM_COMPRESSED is not set
 CONFIG_SCFS_LOWER_PAGECACHE_INVALIDATION=y
@@ -3845,6 +3938,7 @@ CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC=y
 CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC_VALUE=1
 # CONFIG_PANIC_ON_OOPS is not set
 CONFIG_PANIC_ON_OOPS_VALUE=0
+# CONFIG_PANIC_ON_RECURSIVE_FAULT is not set
 # CONFIG_DETECT_HUNG_TASK is not set
 CONFIG_SCHED_DEBUG=y
 CONFIG_SYSRQ_SCHED_DEBUG=y
@@ -4007,6 +4101,12 @@ CONFIG_SEC_SELINUX=y
 # CONFIG_MST_LDO is not set
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
+
+#
+# ICCC
+#
+# CONFIG_TZ_ICCC is not set
+# CONFIG_TZ_ICCC_DEBUG is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
@@ -4111,6 +4211,8 @@ CONFIG_CRYPTO_TWOFISH_COMMON=y
 CONFIG_CRYPTO_DEFLATE=y
 # CONFIG_CRYPTO_ZLIB is not set
 CONFIG_CRYPTO_LZO=y
+CONFIG_CRYPTO_LZ4=y
+# CONFIG_CRYPTO_LZ4HC is not set
 
 #
 # Random Number Generation
@@ -4154,6 +4256,7 @@ CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
+CONFIG_LZ4_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
