--- a/drivers/video/msm/mdss/samsung/Makefile
+++ b/drivers/video/msm/mdss/samsung/Makefile
@@ -98,6 +98,15 @@ obj-$(CONFIG_PANEL_S6E3FA3_AMS568HN01_FHD) += S6E3FA3_AMS568HN01/
 # Tab E panel
 obj-$(CONFIG_PANEL_NT51017_B4P096WX5VP09_WXGA) += NT51017_B4P096WX5VP09/
 
+# J7_CHN panel-S6D7AA0X62_BV050HDM
+obj-$(CONFIG_PANEL_S6D7AA0X62_BV050HDM_HD_5_5) += S6D7AA0X62_BV050HDM/
+
+# O7_CHN panel-ILI9881C_SKI550002
+obj-$(CONFIG_PANEL_ILI9881C_SKI550002_HD) += ILI9881C_SKI550002/
+
+#J3_SPR panel-S6E8AA5X01_AMS497HY01
+obj-$(CONFIG_PANEL_S6E8AA5X01_AMS497HY01_HD) += S6E8AA5X01_AMS497HY01/
+
 #
 # To build ALL panel files(For build error checking)
 #
