--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -474,6 +474,48 @@ config MACH_A8_CHN_OPEN
 	  help
 	  Support for Samsung A8 CHN Open device.
 
+config SEC_O7_PROJECT
+	depends on ARCH_MSM8916
+	default n
+	bool "Samsung O7 Project"
+	help
+	  Support for Samsung O7 Project
+
+config MACH_O7_CHN_OPEN
+	depends on SEC_O7_PROJECT
+	default n
+	bool "Samsung O7 China Open"
+	help
+	  Support for Samsung O7 China Open device.
+
+config MACH_O7_SWA_OPEN
+	depends on SEC_O7_PROJECT
+	default n
+	bool "Samsung O7 SWA Open"
+	help
+	  Support for Samsung O7 SWA Open device.
+
+config SEC_J3_PROJECT
+	depends on ARCH_MSM8916
+	default n
+	bool "Samsung J3 Project"
+	help
+	  Support for Samsung J3 Project
+
+config MACH_J3LTE_CHN_CTC
+	depends on SEC_J3_PROJECT
+	default n
+	bool "Samsung J3LTE CHN CTC"
+	help
+	  Support for Samsung J3LTE CHN CTC device.
+
+config MACH_J3LTE_USA_SPR
+	depends on SEC_J3_PROJECT
+	default n
+	bool "Samsung J3LTE USA SPR"
+	help
+	  Support for Samsung J3LTE USA SPR device.
+
 config SEC_J1_PROJECT
 	depends on ARCH_MSM8916
 		default n
