--- a/drivers/video/msm/mdss/samsung/Kconfig
+++ b/drivers/video/msm/mdss/samsung/Kconfig
@@ -348,3 +348,16 @@ config PANEL_NT51017_B4P096WX5VP09_WXGA
 	default n
 	---help---
 	NOVATEK NT51017 LDI 1280_800
+config PANEL_ILI9881C_SKI550002_HD
+	depends on FB_MSM_MDSS_SAMSUNG
+	bool "ILI ILI9881C LDI"
+	default n
+	---help---
+	ILI ILI9881C LDI 720_1280
+
+config PANEL_S6E8AA5X01_AMS497HY01_HD
+	depends on FB_MSM_MDSS_SAMSUNG
+	bool "SDC S6E8AA5X01 LDI"
+	default n
+	---help---
+	SDC S6E8AA5X01 LDI 720_1280
