--- a/arch/arm/configs/o7prolte_defconfig
+++ b/arch/arm/configs/o7prolte_defconfig
@@ -46,8 +46,8 @@ CONFIG_HAVE_KERNEL_LZ4=y
 CONFIG_KERNEL_LZ4=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
-CONFIG_SYSVIPC=y
-CONFIG_SYSVIPC_SYSCTL=y
+#CONFIG_SYSVIPC=y
+#CONFIG_SYSVIPC_SYSCTL=y
 # CONFIG_POSIX_MQUEUE is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
@@ -214,6 +214,10 @@ CONFIG_MODULES_USE_ELF_REL=y
 CONFIG_CLONE_BACKWARDS=y
 CONFIG_OLD_SIGSUSPEND3=y
 CONFIG_OLD_SIGACTION=y
+CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
+CONFIG_ARCH_MMAP_RND_BITS_MIN=8
+CONFIG_ARCH_MMAP_RND_BITS_MAX=16
+CONFIG_ARCH_MMAP_RND_BITS=8
 
 #
 # GCOV-based kernel profiling
@@ -267,6 +271,7 @@ CONFIG_IOSCHED_TEST=m
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
+# CONFIG_IOSCHED_BFQ is not set
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_ROW is not set
 CONFIG_DEFAULT_CFQ=y
@@ -339,17 +344,13 @@ CONFIG_ARCH_MSM8916=y
 # CONFIG_ARCH_MSM8226 is not set
 # CONFIG_SEC_FACTORY is not set
 # CONFIG_SEC_8939_PROJECT is not set
-# CONFIG_3G_DDR_SUPPORT is not set
 # CONFIG_SEC_A7_PROJECT is not set
 # CONFIG_SEC_A3_PROJECT is not set
 # CONFIG_SEC_A5_PROJECT is not set
 # CONFIG_SEC_GTEL_PROJECT is not set
-# CONFIG_SEC_GTES_PROJECT is not set
 # CONFIG_SEC_K5_PROJECT is not set
 # CONFIG_SEC_H7_PROJECT is not set
 # CONFIG_SEC_A8_PROJECT is not set
-# CONFIG_SEC_A5X_PROJECT is not set
-# CONFIG_SEC_A7X_PROJECT is not set
 CONFIG_SEC_O7_PROJECT=y
 # CONFIG_MACH_O7_CHN_OPEN is not set
 CONFIG_MACH_O7_SWA_OPEN=y
@@ -425,7 +426,6 @@ CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL=y
 # CONFIG_KRAIT_REGULATOR is not set
 # CONFIG_EXTEND_SERIAL_NUM_16 is not set
 # CONFIG_RTC_AUTO_PWRON is not set
-# CONFIG_BARCODE_PAINTER is not set
 # CONFIG_SAMSUNG_PRODUCT_SHIP is not set
 # CONFIG_PLAT_SPEAR is not set
 
@@ -554,8 +554,8 @@ CONFIG_FIX_INACTIVE_RATIO=y
 CONFIG_TIGHT_PGDAT_BALANCE=y
 # CONFIG_SWAP_ENABLE_READAHEAD is not set
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
-CONFIG_PROCESS_RECLAIM=y
 CONFIG_MIN_DIRTY_THRESH_PAGES=2560
+CONFIG_PROCESS_RECLAIM=y
 CONFIG_MMAP_READAROUND_LIMIT=16
 CONFIG_ENABLE_VMALLOC_SAVING=y
 # CONFIG_NO_VM_RECLAIM is not set
@@ -1269,7 +1269,6 @@ CONFIG_MUIC_SUPPORT_CHARGING_CABLE=y
 # CONFIG_MUIC_SUPPORT_VZW_INCOMPATIBLE is not set
 CONFIG_MUIC_SUPPORT_DESKDOCK=y
 # CONFIG_MUIC_SUPPORT_SMARTDOCK is not set
-# CONFIG_MUIC_SM5703_SUPPORT_LANHUB_TA is not set
 # CONFIG_SRAM is not set
 # CONFIG_HAPTIC_ISA1200 is not set
 CONFIG_QSEECOM=y
@@ -1283,6 +1282,7 @@ CONFIG_CHECK_SIMSLOT_COUNT=y
 CONFIG_CHECK_SIMSLOT_COUNT_GPIO=0
 CONFIG_CHECK_SIMSLOT_COUNT_DT=y
 # CONFIG_MACH_KOR_EARJACK_WR is not set
+CONFIG_UID_CPUTIME=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1582,7 +1582,6 @@ CONFIG_INPUT_KEYBOARD=y
 # CONFIG_KEYBOARD_ABOV_TOUCH_A3 is not set
 # CONFIG_KEYBOARD_ABOV_TOUCH_A5 is not set
 # CONFIG_KEYBOARD_ABOV_TOUCH_A8 is not set
-# CONFIG_KEYBOARD_ABOV_TOUCH_NA7 is not set
 # CONFIG_KEYBOARD_ADP5588 is not set
 # CONFIG_KEYBOARD_ADP5589 is not set
 CONFIG_KEYBOARD_ATKBD=y
@@ -1608,7 +1607,6 @@ CONFIG_KEYBOARD_GPIO=y
 # CONFIG_KEYBOARD_XTKBD is not set
 # CONFIG_SENSORS_HALL is not set
 # CONFIG_SENSORS_HALL_REAR is not set
-# CONFIG_KEYBOARD_TC360_TKEY_J3 is not set
 CONFIG_INPUT_MOUSE=y
 CONFIG_MOUSE_PS2=y
 CONFIG_MOUSE_PS2_ALPS=y
@@ -1713,8 +1711,6 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_ZT7554_TS is not set
 # CONFIG_TOUCHSCREEN_ZT7548_TS is not set
 CONFIG_TOUCHSCREEN_ZT7538_TS=y
-# CONFIG_DUAL_TOUCH_IC_CHECK is not set
-# CONFIG_TOUCHKEY_NO_LED is not set
 # CONFIG_TOUCHSCREEN_FTS is not set
 # CONFIG_TOUCHSCREEN_ATMEL_MXT1664T is not set
 # CONFIG_TOUCHSCREEN_CYTTSP5 is not set
@@ -2407,8 +2403,6 @@ CONFIG_MSMB_JPEG=y
 # CONFIG_SEC_CAMERA_TUNING is not set
 # CONFIG_CAM_USE_EXT_VANA_GPIO is not set
 CONFIG_CAMERA_SYSFS_V2=y
-# CONFIG_DB8221A is not set
-# CONFIG_CAM_DUAL_POWER_SEQ is not set
 CONFIG_MSM_VIDC_V4L2=y
 # CONFIG_MSM_VIDC_VMEM is not set
 # CONFIG_MSM_WFD is not set
@@ -2643,12 +2637,10 @@ CONFIG_FB_MSM_MDSS_SAMSUNG=y
 # CONFIG_PANEL_TC358764_LTL101AL06_KTD3156_WXGA is not set
 # CONFIG_PANEL_S6D7AA0_LSL080AL03_RT8511_WXGA is not set
 # CONFIG_PANEL_S6E3FA3_AMS568HN01_FHD is not set
-# CONFIG_PANEL_S6E3FA3_AMS549JR01_FHD is not set
 # CONFIG_PANEL_EA8061V_AMS391DT01_XGA is not set
 # CONFIG_PANEL_S6D7AA0X62_BV050HDM_HD_5_0 is not set
 CONFIG_PANEL_S6D7AA0X62_BV050HDM_HD_5_5=y
 # CONFIG_PANEL_NT51017_B4P096WX5VP09_WXGA is not set
-# CONFIG_PANEL_S6D7AA0X11_TV080WXM_WXGA is not set
 CONFIG_PANEL_ILI9881C_SKI550002_HD=y
 # CONFIG_PANEL_S6E8AA5X01_AMS497HY01_HD is not set
 # CONFIG_EXYNOS_VIDEO is not set
@@ -3130,7 +3122,6 @@ CONFIG_MMC_SUPPORT_BKOPS_MODE=y
 CONFIG_MMC_BKOPS_NODE_UID=1000
 CONFIG_MMC_BKOPS_NODE_GID=1001
 CONFIG_MMC_BLOCK_TEST=m
-# CONFIG_MMC_CPRM is not set
 
 #
 # MMC/SD/SDIO Host Controller Drivers
@@ -3356,7 +3347,6 @@ CONFIG_ION=y
 # CONFIG_ION_TEST is not set
 CONFIG_ION_MSM=y
 # CONFIG_ALLOC_BUFFERS_IN_4K_CHUNKS is not set
-# CONFIG_ION_MSM_SYSTEM_HEAP_POOL_LIMIT is not set
 # CONFIG_FIQ_DEBUGGER is not set
 # CONFIG_FIQ_WATCHDOG is not set
 # CONFIG_USB_WPAN_HCD is not set
@@ -3364,6 +3354,19 @@ CONFIG_ION_MSM=y
 # CONFIG_CED1401 is not set
 # CONFIG_DGRP is not set
 CONFIG_VNSWAP=y
+
+#
+# Qualcomm Atheros Prima WLAN module
+#
+# CONFIG_PRIMA_WLAN is not set
+CONFIG_PRONTO_WLAN=m
+# CONFIG_PRIMA_WLAN_BTAMP is not set
+CONFIG_PRIMA_WLAN_LFR=y
+CONFIG_PRIMA_WLAN_OKC=y
+CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
+CONFIG_WLAN_FEATURE_11W=y
+CONFIG_QCOM_VOWIFI_11R=y
+CONFIG_ENABLE_LINUX_REG=y
 
 #
 # Qualcomm MSM specific device drivers
@@ -3421,7 +3424,6 @@ CONFIG_MSM_IOMMU_V1=y
 # CONFIG_MSM_IOMMU_VBIF_CHECK is not set
 # CONFIG_IOMMU_NON_SECURE is not set
 # CONFIG_IOMMU_FORCE_4K_MAPPINGS is not set
-# CONFIG_MSM_IOMMU_TLBINVAL_ON_MAP is not set
 CONFIG_MMU500_ACTIVE_PREFETCH_BUG_WITH_SECTION_MAPPING=y
 
 #
@@ -3509,8 +3511,6 @@ CONFIG_SAMSUNG_LPM_MODE=y
 # CONFIG_DISABLE_SAVE_CAPACITY_MAX is not set
 CONFIG_SIOP_CHARGING_LIMIT_CURRENT=700
 # CONFIG_EN_OOPS is not set
-# CONFIG_STORE_MODE is not set
-# CONFIG_SW_SELF_DISCHARGING is not set
 CONFIG_SENSORS=y
 CONFIG_SENSORS_CORE=y
 # CONFIG_SENSORS_SSC is not set
@@ -3520,7 +3520,6 @@ CONFIG_SENSORS_CM36672P=y
 # CONFIG_SENSORS_CM36652 is not set
 # CONFIG_SENSORS_CM36652_LEDA_EN_GPIO is not set
 # CONFIG_SENSORS_CM36652_SENSOR_EN_GPIO is not set
-# CONFIG_SENSORS_CM36655 is not set
 # CONFIG_SENSORS_GP2A002 is not set
 # CONFIG_SENSORS_LEDA_EN_GPIO is not set
 # CONFIG_SENSORS_CM3323 is not set
@@ -3530,13 +3529,8 @@ CONFIG_SENSORS_STK3013=y
 # CONFIG_SENSORS_SX9500 is not set
 CONFIG_SENSORS_SX9500_INIT_TOUCH_THRESHOLD=3000
 CONFIG_SENSORS_SX9500_NORMAL_TOUCH_THRESHOLD=17
-# CONFIG_SENSORS_SX9500_TEMPERATURE_COMPENSATION is not set
-# CONFIG_SENSORS_SX9500_DEFENCE_CODE_FOR_TA_NOISE is not set
-# CONFIG_SENSORS_SX9500_REGULATOR_ONOFF is not set
-# CONFIG_SENSORS_SX9500_SAMPLE_RATE_SET_125KHZ is not set
 # CONFIG_SENSORS_SX9500_WIFI is not set
 # CONFIG_SENSORS_SX9310 is not set
-# CONFIG_SENSORS_SX9500_ALWAYS is not set
 # CONFIG_SENSORS_BMA2X2 is not set
 # CONFIG_SENSORS_BMM050 is not set
 # CONFIG_INPUT_BMA2x2_ACC_ALERT_INT is not set
@@ -3629,13 +3623,13 @@ CONFIG_SEC_DEBUG_NOCACHE_LOG_IN_LEVEL_LOW=y
 # CONFIG_SEC_MONITOR_BATTERY_REMOVAL is not set
 CONFIG_SEC_BSP=y
 CONFIG_SEC_THERMISTOR=y
-# CONFIG_SEC_USE_FLASH_THERMISTOR is not set
 
 #
 # Firmware Drivers
 #
 # CONFIG_FIRMWARE_MEMMAP is not set
 CONFIG_MSM_TZ_LOG=y
+# CONFIG_SEC_NET_FILTER is not set
 CONFIG_GATOR=m
 
 #
@@ -3972,14 +3966,6 @@ CONFIG_RESTART_REASON_SEC_PARAM=y
 # CONFIG_CX_VOTE_TURBO is not set
 
 #
-# Samsung Rooting Restriction Feature
-#
-CONFIG_SEC_RESTRICT_ROOTING=y
-CONFIG_SEC_RESTRICT_SETUID=y
-CONFIG_SEC_RESTRICT_FORK=y
-CONFIG_SEC_RESTRICT_ROOTING_LOG=y
-
-#
 # Security options
 #
 CONFIG_KEYS=y
@@ -4004,7 +3990,6 @@ CONFIG_SEC_SELINUX=y
 # CONFIG_SECURITY_TOMOYO is not set
 # CONFIG_SECURITY_APPARMOR is not set
 # CONFIG_SECURITY_YAMA is not set
-# CONFIG_MST_LDO is not set
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
