--- a/drivers/sensors/Makefile
+++ b/drivers/sensors/Makefile
@@ -12,10 +12,12 @@ obj-$(CONFIG_SENSORS_K2HH)          += k2hh.o
 # optical_sensor
 obj-$(CONFIG_SENSORS_CM36672P)      += cm36672p.o
 obj-$(CONFIG_SENSORS_CM36652)           += cm36652.o
+obj-$(CONFIG_SENSORS_CM36655)           += cm36655.o
 obj-$(CONFIG_SENSORS_GP2A002)	    += gp2a002.o
 obj-$(CONFIG_SENSORS_TCS3490)	    += tcs3490.o
 obj-$(CONFIG_SENSORS_CM3323)	    += cm3323.o
 obj-$(CONFIG_SENSORS_TMD3782S)	+= taos_tmd3782.o
+obj-$(CONFIG_SENSORS_STK3013)      += stk3013.o
 # grip_sensor
 obj-$(CONFIG_SENSORS_SX9310)        +=sx9310.o
 obj-$(CONFIG_SENSORS_SX9500)        +=sx9500.o
